[package]
name = "idk_project_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.24", features = ["full", "nightly"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
spinners = "4.1.0"
tokio = { version = "1.26.0", features = ["full"] }
